--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-        android:id="@+id/textV_start_scan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start Scan Result"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_start_scan"/>
     <Button
         android:id="@+id/button_stop_scan"
         android:layout_width="wrap_content"
@@ -28,15 +20,7 @@
         android:text="Stop Scan"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textV_start_scan"/>
-    <TextView
-        android:id="@+id/textV_Stop_scan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stop Scan Result"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_stop_scan"/>
+        app:layout_constraintTop_toBottomOf="@+id/button_start_scan"/>
     <Button
         android:id="@+id/button_get_device"
         android:layout_width="wrap_content"
@@ -44,9 +28,9 @@
         android:text="Get Device List"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textV_Stop_scan"/>
+        app:layout_constraintTop_toBottomOf="@+id/button_stop_scan"/>
     <TextView
-        android:id="@+id/textV_get_device"
+        android:id="@+id/textV_scan_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Get Device List Result"
@@ -60,7 +44,7 @@
         android:text="CONNECT DEVICE"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textV_get_device"/>
+        app:layout_constraintTop_toBottomOf="@+id/textV_scan_result"/>
 
     <Button
         android:id="@+id/button_disconnect"
