--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,4 +94,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textV_body_fat"/>
+    <Button
+        android:id="@+id/button_get_previous_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GET PREVIOUS USER INFO"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textV_muscle"/>
+    <TextView
+        android:id="@+id/textV_previous_user_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Previous_user_info"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_get_previous_info"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
