[ADD] Device Info List delete,clean 로직 추가 및 키값 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,4 +126,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_get_device_info_list"/>
+    <Button
+        android:id="@+id/button_get_device_info_list_clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CLEAR DEVICE INFO LIST"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textV_get_device_info_list"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
